# backend-home-theory-2

./: .gitignore
fastapi-demo/: README.md  pyproject.toml
fastapi-demo/fastapi_demo_1/: main.py
fastapi-demo/fastapi_demo_2/: main.py
fastapi-demo/fastapi_demo_2/routers/: books.py
fastapi-demo/fastapi_demo_3/: main.py
fastapi-demo/fastapi_demo_3/routers/: books.py
fastapi-demo/fastapi_demo_4/: main.py
grpc-demo/: README.md  package-lock.json  package.json  pyproject.toml
grpc-demo/nodejs/: README.md  package-lock.json  package.json
grpc-demo/nodejs/src/: client.ts  server.ts
grpc-demo/nodejs/src/services/: Addition.ts
grpc-demo/protos/: addition.proto
grpc-demo/python/: client.py  server.py
