[tool.poetry]
name = "grpc-demo"
version = "0.1.0"
description = ""
authors = ["Nathan Segers <nathan.segers@howest.be>"]
readme = "README.md"
packages = [{include = "grpc_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
grpcio-tools = "^1.50.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
